# Hands-On-Assignment-2-Construct-AI-QR-Code-Generator-with-Python

./: README.md  pyproject.toml  qr_popup.py
